tests/macros/password/plugin.stderr
error: option `plugin` does not exist for kind `password`
 --> $DIR/plugin.rs:2:48
  |
2 |     let q = inquisition::questions![Password { plugin: todo!() }];
  |                                                ^^^^^^
