tests/macros/password/plugin.rs
fn main() {
    let q = inquisition::questions![Password { plugin: todo!() }];
}
